# Metascaler

./: .env.example  .gitignore  Dockerfile  README.md  Submisson.md  __init__.py  baseline.py  client.py  hf_login.py  implementation_plan.md  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  task.md  test_env.py  walkthrough.md
server/: Dockerfile  __init__.py  app.py
